--- a/ImageAlbum/index.html
+++ b/ImageAlbum/index.html
@@ -14,51 +14,113 @@
 
 </head>
 <body>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Home</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample04">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Locomotives</a>
+          </li>
+		  <li class="nav-item active">
+            <a class="nav-link" href="#">Model Events <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Model Events</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="#">2019-10-19 Lincoln Model Rail Club</a>
+              <a class="dropdown-item" href="#">2019-10-26 Woodthorpe Model Railway Club</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-md-0">
+          <input class="form-control" type="text" placeholder="Search">
+        </form>
+      </div>
+    </nav>
+
 <div class="container mt-4">
+	<div class="jumbotron">
+		<div class="row">
+			<h1>Lincoln & District Model Railway Club Model Exhibition</h1>
+			<div class="col-md-4">
+				<p class="lead">Lady Eastwood Pavilion, Newark Showground, Drove Lane, Newark, Nottinghamshire NG24 2NY</p>
+				<p>19th and 20th October 2019</p>
+			</div>
+
+			<div class="col-md-6">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe src="https://www.youtube.com/embed/sfhv8iYXiYU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+    </div>
 
 	<div class="row">
 		<div class="col-md-4">
-			<div class="ba-0">
-				<div class="card-img-top">
-				<img data-toggle="modal"
-					data-target="#ShowImage"
-					data-imagename="images/LochTat01.JPG"
-					data-imagetitle="Loch Tat"
+		
+			<div class="card" style="width: 20rem;">
+				<img class="card-img-top" data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat"
 					alt="Card image cap"
 					class="rounded mx-auto d-block"
-					src="images/LochTat01.JPG" 
+					src="images/LochTat02.JPG"
 					style="width:100%">
+				<div class="card-body">
+					<h5 class="card-title">Loch Tat</h5>
+					<p class="card-text"></p>
+					<a  data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat" class="btn btn-outline-primary">View</a>
 				</div>
-				
 			</div>
 		</div>
 		<div class="col-md-4">
-			<div class="ba-0">
-				<img data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat"
-				alt="Card image cap"
-				class="rounded mx-auto d-block"
-				src="images/LochTat02.JPG"
-				style="width:100%">
+			<div class="card" style="width: 20rem;">
+				<img class="card-img-top" data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat"
+					alt="Card image cap"
+					class="rounded mx-auto d-block"
+					src="images/LochTat02.JPG"
+					style="width:100%">
+				<div class="card-body">
+					<h5 class="card-title">Loch Tat</h5>
+					<p class="card-text"></p>
+					<a  data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat" class="btn btn-outline-primary">View</a>
+				</div>
 			</div>
 		</div>
+		
 		<div class="col-md-4">
-			<div class="ba-0">
-				<img data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat03.JPG" data-imagetitle="Loch Tat" alt="Card image cap" class="rounded mx-auto d-block" src="images/LochTat03.JPG"  style="width:100%">
+			<div class="card" style="width: 20rem;">
+				<img class="card-img-top" data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat"
+					alt="Card image cap"
+					class="rounded mx-auto d-block"
+					src="images/LochTat02.JPG"
+					style="width:100%">
+				<div class="card-body">
+					<h5 class="card-title">Loch Tat</h5>
+					<p class="card-text"></p>
+					<a  data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat" class="btn btn-outline-primary">View</a>
+				</div>
 			</div>
 		</div>
+		
 		<div class="col-md-4">
-			<div class="ba-0">
-				<img data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat04.JPG" data-imagetitle="Loch Tat"  alt="Card image cap" class="rounded mx-auto d-block" src="images/LochTat04.JPG"  style="width:100%">
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="ba-0">
-				<img data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat05.JPG" data-imagetitle="Loch Tat"  alt="Card image cap" class="rounded mx-auto d-block" src="images/LochTat05.JPG"  style="width:100%">
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="ba-0">
-				<img data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat06.JPG" data-imagetitle="Loch Tat"  alt="Card image cap" class="rounded mx-auto d-block" src="images/LochTat06.JPG"  style="width:100%">
+			<div class="card" style="width: 20rem;">
+				<img class="card-img-top" data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat"
+					alt="Card image cap"
+					class="rounded mx-auto d-block"
+					src="images/LochTat02.JPG"
+					style="width:100%">
+				<div class="card-body">
+					<h5 class="card-title">Loch Tat</h5>
+					<p class="card-text"></p>
+					<a  data-toggle="modal" data-target="#ShowImage" data-imagename="images/LochTat02.JPG" data-imagetitle="Loch Tat" class="btn btn-outline-primary">View</a>
+				</div>
 			</div>
 		</div>
     </div>		
